@@ -9,7 +9,7 @@
 
 <!-- ###LIST_GROUPS### begin -->
 <div>
-	###pageBrowser###
+	###PAGEBROWSER###
 	<div id="tx-community-grouplist">
 		<!-- ###LOOP:GROUPS### begin -->
 		<!-- ###LOOP_CONTENT### -->
@@ -20,7 +20,7 @@
 		<!-- ###LOOP_CONTENT### -->
 		<!-- ###LOOP:GROUPS### end -->
 	</div>
-	###pageBrowser###
+	###PAGEBROWSER###
 </div>
 <!-- ###LIST_GROUPS### end -->
 
