@@ -9,8 +9,8 @@
 
 
 <!-- ###USER_LIST### begin -->
+###PAGEBROWSER###
 <ul>
-
 	<!-- ###LOOP:USERS### begin -->
 	<!-- ###LOOP_CONTENT### -->
 	<li>
@@ -23,6 +23,7 @@
 	<!-- ###LOOP:USERS### end -->
 
 </ul>
+###PAGEBROWSER###
 <!-- ###USER_LIST### end -->
 
 <!-- ###NO_RESULTS### begin -->
