@@ -1,6 +1,7 @@
 2008-12-03 Frank Naegler  <typo3@naegler.net>
 
 	* adding pagebrowser to groupList
+	* adding pagebrowser to userList
 
 2008-12-02 Frank Naegler  <typo3@naegler.net>
 
